--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
 body {
     background-image: url('https://sjunkins.wordpress.com/wp-content/uploads/2012/04/the-best-top-desktop-hd-dark-black-wallpapers-dark-black-wallpaper-dark-background-dark-wallpaper-23.jpg');
+    background-size: 100% 100%;
 }
